k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics-collector
  labels:
    name: analytics-collector
    pod-security.kubernetes.io/warn: restricted
