k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-collector
  namespace: analytics-collector
  labels:
    app: analytics-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-collector
  template:
    metadata:
      labels:
        app: analytics-collector
    spec:
      serviceAccountName: analytics-collector
      automountServiceAccountToken: false
      volumes:
        - name: service-account-token-volume
          projected:
            sources:
              - serviceAccountToken:
                  audience: patch-target
                  expirationSeconds: 3600
                  path: token
      containers:
        - name: analytics-collector
          image: analytics-collector
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
            - name: metrics
              containerPort: 8001
          resources:
            limits:
              memory: 128M
              cpu: 50m
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 10
          volumeMounts:
            - name: service-account-token-volume
              mountPath: "/service-account"
              readOnly: true
