k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-collector
  namespace: analytics-collector
spec:
  selector:
    app: analytics-collector
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
