k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: analytics-collector
  namespace: analytics-collector
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - analytics.corybuecker.com
  rules:
    - backendRefs:
        - name: analytics-collector
          namespace: analytics-collector
          port: 8000
